--- a/index.html
+++ b/index.html
@@ -5,38 +5,56 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Min Side</title>
+  <title>Rubens webside</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.css">
   <style>
+  body {
+    text-align: center;
+    background-image: url('https://d2gg9evh47fn9z.cloudfront.net/thumb_COLOURBOX8595576.jpg');
+    background-size: 200vh 100vh;
+    height: 100vh;
+  }
   .content h1 {
-  	color: red;
-  	font-weight: bolder;
+    color: red;
+    font-weight: bolder;
   }
   .content h3 {
-  	font-style: italic;
+    font-style: italic;
   }
   .content  h3.normal {
-  	font-style: normal;
+    font-style: normal;
   }
   .content {
-  	margin-left: 50px;
+    margin-left: 50px;
   }
-  
+  .has-background-light {
+      width: 300px;
+      border-radius: 25px;
+      margin: 25px auto; 
+      text-align: center; 
+  }
+    .has-background-light h2 {
+        margin: 20px;
+    }
+      
 
   </style>
+    }
 </head>
 <body>
 
- 	 <div class='content'>
-  		<h1>THE WEBSITE OF RUBEN</h1>
-  		<h3> motto: </h3>
-  		<h3>not the website of Ruben but THE WEBSITE OF RUBEN ...</h3>
-  	</div>
-    <div class='content'>
-  		<h3 class="normal">RULES:</h3>
-  		<ul>
-  			<li><h3>make the developer mad</h3></li>
-  			<li></li>
-  		</ul>
-  	</div>
+   <div class='content'>
+      <h1>THE WEBSITE OF RUBEN</h1>
+      <h3>not the website of Ruben but THE WEBSITE OF RUBEN ...</h3>
+    </div>
+    <div class=' has-background-light content'>
+        <h2>   RULES:</h2>
+      <ul>
+        <li><h4>make the developer mad</h4></li>
+        <li><h4>only for gamers</h4></li>
+        <li><h4>DONT follow the rules :)</h4></li>
+
+      </ul>
+      
+    </div>
 </body>
