--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       width: 300px;
       border-radius: 25px;
       margin: 25px auto; 
-      text-align: center; 
+      text-align: center;
+      background-color: grey !important; 
   }
     .has-background-light h2 {
         margin: 20px;
